--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,14 @@
   <welcome-file-list>  
     <welcome-file>login.html</welcome-file>  
   </welcome-file-list>  
+  <error-page> 
+ 	<error-code>404</error-code> 
+  	<location>/404.html</location>
+  </error-page>
+  <error-page> 
+ 	<error-code>500</error-code> 
+  	<location>/500.html</location>
+  </error-page>
     
   <!--Spring核心监听器  -->  
   <!--在服务器启动时加载Spring容器，且只会加载一次  -->  
